# photo-to-resin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
notebooks/: interfejs.ipynb  przyklady.ipynb
photo_to_resin/: __init__.py  cli.py  core.py  examples.py  notebook.py  preview.py  render3d.py  sample.py
scripts/: figurki_3d.py  figurki_pipeline.py  make_site_assets.py
site/: index.html
site/figurki/: manifest-3d.json  rycerz-z-kartonu-figurka.stl
site/przyklady/: gory-o-swicie-litofan.stl  kot-w-oknie-litofan.stl  latarnia-morska-litofan.stl  manifest.json  wieczorne-miasto-litofan.stl  zaglowka-o-zachodzie-litofan.stl
tests/: test_core.py
