[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-to-resin"
version = "0.1.0"
description = "Zamień zdjęcie w litofan STL gotowy do druku na drukarce żywicznej."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Artur Skowronski" }]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    "matplotlib>=3.8",
]

[project.scripts]
photo-to-resin = "photo_to_resin.cli:main"

[tool.setuptools.packages.find]
include = ["photo_to_resin*"]
